--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-bootstrap-navbar": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
