--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-bootstrap-navbar": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
